# 06-Microservice_with_Kafka

./: Compose.yml
order-service/: dockerfile  pyproject.toml
order-service/order_service/: main.py
